<resources>
    <string name="app_title">MP3</string>
    <string name="artist_title">Artist</string>
    <string name="menu_cancel">Cancel</string>
    <string name="add_cancelled">Add Cancelled</string>
    <string name="menu_delete">Delete</string>
    <string name="play_audio">Play Audio</string>
    <string name="pause_audio"></string>


    //Song Model
    <string name="songname">SongName</string>
    <string name="genre">MusicGenre</string>
    <string name="releasedate">ReleaseDate</string>
    <string name ="mp3_booting">Mp3Booting</string>
    <string name="button_addMusic">Add Music</string>
    <string name="duration">duration of the song</string>
    <string name="menu_addSong">AddSong</string>
    <string name="saveSong">saveSong</string>
    <string name="playButton">playButton</string>
    <string name="button_addImageSong">Add Image for Song</string>
    <string name="select_song_image">Select song image</string>
    <string name="change_song_image">Change song image</string>












    //Artist Model
    <string name="artistname">ArtistName</string>
    <string name="socialmedia">SocialMedia</string>
    <string name="aboutartist">AboutArtist</string>
    <string name="button_addArtist">Add Artist</string>
    <string name="dateofbirth">DateOfBirth</string>
    <string name="saveArtist">saveArtist</string>
    <string name="button_addImageArtist">Add Image for artist</string>
    <string name="select_artist_image">Select artist image</string>
    <string name="change_artist_image">Change artist image</string>







</resources>